Cycles: Light and shadow linking does not work when you link an object to itself. #108363

Closed
opened 2023-05-28 03:59:20 +02:00 by Alaska · 1 comment
Member

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 532.03

Blender Version
Broken version: 4.0.0 Alpha, branch: main, commit date: 2023-05-27 16:27, hash: 0a004fbad460
Worked: NA

Short description of error
If you light/shadow link an object to itself, then the light/shadow link will not function properly.

Exact steps for others to reproduce the error

  1. Change the render engine to Cycles.
  2. Create a collection, and in it place two objects. I will call them "cube" and "ground".
  3. On the "cube" object add two materials. A diffuse material and a emissive material. Assign the emissive material to one face and the diffuse material to the rest.
  4. Enter the rendered viewport.
  5. Select the cube, in the Object Properties tab under Shading -> Shadow Linking select the collection that the cube is in.
  6. Now notice that the light from the cube is "leaking" through the cube and onto the ground. This shouldn't be happening based on the shadow linking properties selected. Instead, because we shadow linked the object to itself, the cube should be casting shadows, but it doesn't.
  7. The same sort of issue applies to light linking.

Here's a video of the issue, at the end I separate the emissive part of the cube into a separate object to show case how I expect the shadow linking to work:
Incorrect self light-shadow linking.mp4

And here's a .blend file with steps 1-3 done:
Self Light-Shadow Linking Issue.blend

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 532.03 **Blender Version** Broken version: 4.0.0 Alpha, branch: main, commit date: 2023-05-27 16:27, hash: `0a004fbad460` Worked: NA **Short description of error** If you light/shadow link an object to itself, then the light/shadow link will not function properly. **Exact steps for others to reproduce the error** 1. Change the render engine to Cycles. 2. Create a collection, and in it place two objects. I will call them "cube" and "ground". 3. On the "cube" object add two materials. A diffuse material and a emissive material. Assign the emissive material to one face and the diffuse material to the rest. 4. Enter the rendered viewport. 5. Select the cube, in the `Object Properties` tab under `Shading -> Shadow Linking` select the collection that the cube is in. 6. Now notice that the light from the cube is "leaking" through the cube and onto the ground. This shouldn't be happening based on the shadow linking properties selected. Instead, because we shadow linked the object to itself, the cube should be casting shadows, but it doesn't. 7. The same sort of issue applies to light linking. Here's a video of the issue, at the end I separate the emissive part of the cube into a separate object to show case how I expect the shadow linking to work: [Incorrect self light-shadow linking.mp4](/attachments/6eb210e1-7a87-4777-94e1-9e93dda2b18f) And here's a .blend file with steps 1-3 done: [Self Light-Shadow Linking Issue.blend](/attachments/55e85c70-03dc-4028-a1ae-a4781b49ccf1)
Alaska added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-28 03:59:21 +02:00
Iliya Katushenock added the
Interest
Render & Cycles
label 2023-05-28 10:19:36 +02:00
Member

Can confirm
cc @Sergey

Can confirm cc @Sergey
Pratik Borhade added
Module
Render & Cycles
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-05-29 06:36:10 +02:00
Sergey Sharybin self-assigned this 2023-05-30 15:20:47 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-30 20:22:39 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108363
No description provided.